--- a/orgstrap.org
+++ b/orgstrap.org
@@ -1,4 +1,4 @@
-# -*- orgstrap-cypher: sha256; orgstrap-block-checksum: aee974c390d460d805777513dc071f6603456e7b62424156a88e3b015885ad73; no-klobber-test: "I should still be here after it is all over!"; -*-
+# -*- orgstrap-cypher: sha256; orgstrap-block-checksum: b30de1950d8d39b69ecf445bb2b922332fd8506e228e670b0f6560dff2da4697; no-klobber-test: "I should still be here after it is all over!"; -*-
 # [[file:::orgstrap][jump to orgstrap block for this file]]
 #+title: Bootstrap an org-mode file using file local variables
 #+options: num:nil
@@ -52,7 +52,8 @@ The bare minimum needed to make an =org-mode= file executable (with a bit of saf
 =orgstrap= a plain-text executable format.
 
 # Local Variables:
-# eval: (defun orgstrap--confirm-eval (lang body) (not (and (member lang '("elisp" "emacs-lisp")) (eq (intern (secure-hash orgstrap-cypher (prin1-to-string (read (concat "(progn\n" body "\n)"))))) orgstrap-block-checksum))))
+# orgstrap-local-variables-block-version: "0.2"
+# eval: (defun orgstrap--confirm-eval (lang body) (not (and (member lang '("elisp" "emacs-lisp")) (eq orgstrap-block-checksum (intern (secure-hash orgstrap-cypher (let ((print-quoted nil) (print-escape-newlines t)) (prin1-to-string (read (concat "(progn\n" body "\n)"))))))))))
 # eval: (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
 # eval: (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block))
 # eval: (setq-local org-confirm-babel-evaluate t)
@@ -246,7 +247,7 @@ file then ref:orgstrap-helper-defuns will be (was already) run for you.
 #+end_src
 
 #+RESULTS: do-orgstrap-add-block-checksum
-: d1ef02d2ca64f6e861031dbc2769dd4a8e78ba2fde7ccc6c6c613d2f622a380b
+: b30de1950d8d39b69ecf445bb2b922332fd8506e228e670b0f6560dff2da4697
 
 ** =orgstrap= implementation
 Functions to calculate =orgstrap-block-checksum= and set it as a file local variable.
@@ -291,14 +292,17 @@ The macro provides local bindings for four names: `info', `params', `body-unexpa
   ;; behavior when lite is not nil and the expected useage of this
   ;; macro I don't think we would ever want to pass a non nil lite
   `(save-excursion
-     (org-babel-goto-named-src-block ,blockname)
-     (let* ((info (org-babel-get-src-block-info))
-            (params (nth 2 info))
-            (body-unexpanded (nth 1 info))
-            ;; from `org-babel-check-confirm-evaluate'
-            ;; and `org-babel-execute-src-block'
-            (body (orgstrap--expand-body info)))
-       ,@macro-body)))
+     (let ((inhibit-message t)) ; inhibit-message only blocks from the message area not the log
+       (org-babel-goto-named-src-block ,blockname))
+     (unwind-protect
+         (let* ((info (org-babel-get-src-block-info))
+                (params (nth 2 info))
+                (body-unexpanded (nth 1 info))
+                ;; from `org-babel-check-confirm-evaluate'
+                ;; and `org-babel-execute-src-block'
+                (body (orgstrap--expand-body info)))
+           ,@macro-body)
+       (org-mark-ring-goto))))
 
 ;; edit user facing functions
 (defun orgstrap-get-block-checksum (&optional cypher)
@@ -306,8 +310,13 @@ The macro provides local bindings for four names: `info', `params', `body-unexpa
   (interactive)
   (orgstrap--with-block orgstrap-orgstrap-block-name
     (let ((cypher (or cypher (orgstrap--current-buffer-cypher)))
-          (body-normalized (prin1-to-string (read (concat "(progn\n" body "\n)")))))
-      ;;(message "%s" body-normalized)
+          (body-normalized (let ((print-quoted nil)) (prin1-to-string (read (concat "(progn\n" body "\n)"))))))
+      (let ((print-escape-newlines t))  ; needed to preserve the escaped newlines
+        (with-current-buffer (create-file-buffer (format "/tmp/body-norm-%s" emacs-major-version))
+          (erase-buffer)
+          (insert body-normalized))
+        ;;(message "%S" body-normalized)
+        (message "%s" (secure-hash cypher body-normalized)))
       (secure-hash cypher body-normalized))))
 
 (defun orgstrap-add-block-checksum (&optional cypher)
@@ -333,12 +342,12 @@ The optional `cypher' argument should almost never be used, instead change the v
 (defvar orgstrap-link-message "jump to the orgstrap block for this file"
   "default message for file internal links")
 
-(defconst orgstrap--default-local-variables-block-version 0.1
+(defconst orgstrap--default-local-variables-block-version "0.1"
   "end of file local variables verion, used to set visible version number
 in the file local variables in `orgstrap--add-file-local-variables'")
 
-(defconst orgstrap--local-variable-eval-commands
-  `((defun orgstrap--expand-body (info)
+(defconst orgstrap--local-variable-eval-commands-0.1
+  '((defun orgstrap--expand-body (info)
       "expand noweb references if noweb is set"
       (let ((coderef (nth 6 info))
             (expand
@@ -357,13 +366,36 @@ in the file local variables in `orgstrap--add-file-local-variables'")
                         (intern
                          (secure-hash
                           orgstrap-cypher
-                          (prin1-to-string (read (concat "(progn\n" body "\n)")))))))
+                          (let ((print-quoted nil)
+                                (print-escape-newlines t))
+                            (prin1-to-string (read (concat "(progn\n" body "\n)"))))))))
                   ;;(message "%s %s" orgstrap-block-checksum content-checksum)
                   (eq orgstrap-block-checksum content-checksum)))))
     (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
     (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block))
     (setq-local org-confirm-babel-evaluate t)
     (fmakunbound #'orgstrap--confirm-eval)))
+
+(defconst orgstrap--local-variable-eval-commands-0.2
+  '((defun orgstrap--confirm-eval (lang body)
+      (not (and (member lang '("elisp" "emacs-lisp"))
+                (eq orgstrap-block-checksum
+                    (intern
+                     (secure-hash
+                      orgstrap-cypher
+                      (let ((print-quoted nil)
+                            (print-escape-newlines t))
+                        (prin1-to-string (read (concat "(progn\n" body "\n)"))))))))))
+    (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
+    (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block))
+    (setq-local org-confirm-babel-evaluate t)
+    (fmakunbound #'orgstrap--confirm-eval)))
+
+(defun orgstrap--local-variable-eval-commands (&optional version)
+  (let ((version (or version orgstrap--default-local-variables-block-version)))
+    (pcase version
+      ("0.1" orgstrap--local-variable-eval-commands-0.1)
+      ("0.2" orgstrap--local-variable-eval-commands-0.2))))
 
 ;; init utility functions
 
@@ -440,21 +472,23 @@ to the current buffer or raise an error if one already exists."
         ;;(error "TODO insert some minimal message or something")
         nil))))
 
-(defun orgstrap--add-file-local-variables ()
+(defun orgstrap--add-file-local-variables (&optional version)
   "Add the file local variables needed to make orgstrap work.
 switching comments probably wont work ? we can try
 Use a prefix argument (i.e. C-u) to add file local variables comments instead of in a :noexport:"
   (interactive)
-  (let* ((elv (orgstrap--read-current-local-variables))
+  (let* ((version (or version orgstrap--default-local-variables-block-version))
+         (lv-commands (orgstrap--local-variable-eval-commands version))
+         (elv (orgstrap--read-current-local-variables))
          (commands-existing (mapcar #'cdr (seq-filter (lambda (l) (eq (car l) 'eval)) elv))))
     ;; good enough to start
-    (cond ((equal commands-existing orgstrap--local-variable-eval-commands) nil)
+    (cond ((equal commands-existing lv-commands) nil)
           ((not commands-existing)
            (let ((print-escape-newlines t))  ; needed to preserve the escaped newlines
              (add-file-local-variable 'orgstrap-local-variables-block-version
-                                      orgstrap--default-local-variables-block-version)
+                                      version)
              (mapcar (lambda (sexp) (add-file-local-variable 'eval sexp))
-                     orgstrap--local-variable-eval-commands)))
+                     lv-commands)))
           ;; we could try to do something fancy here, but it is much simpler
           ;; to just alert the user and have them fix it
           (t (error "Existing eval commands that do not match the commands to be installed have been detected. Please remove those commands and run `orgsrap-add-file-local-variables' again or manually add the orgstrap file local variables. The existing commands are as follows.\n%s" commands-existing)))))
@@ -569,6 +603,74 @@ the orgstrap block, removing any comments and formatting irregularities.
 This is important for two reasons. First it helps prevent denial of service
 attacks against human auditors who have low bandwidth for detecting fiddly
 changes.
+# FIXME prin1-to-string IS NOT PORTABLE TO EMACS 26 WAT !?!?!?
+# quote vs ' issues with that, how to revert/find something consistent, or maybe it is read !??!
+# this is indeed a change in how message is working
+# all of these issues are caused by a change in the default for `print-quoted' from t to nil
+#+begin_src bash :results output code :wrap "src elisp"
+emacs-28-vcs -Q --batch --eval "(message \"%s\" (read \"'(hello world)\"))" 2>&1
+emacs-27 -Q --batch --eval "(message \"%s\" (read \"'(hello world)\"))" 2>&1
+emacs-26 -Q --batch --eval "(message \"%s\" (read \"'(hello world)\"))" 2>&1
+emacs-25 -Q --batch --eval "(message \"%s\" (read \"'(hello world)\"))" 2>&1
+emacs-24 -Q --batch --eval "(message \"%s\" (read \"'(hello world)\"))" 2>&1
+emacs-23 -Q --batch --eval "(message \"%s\" (read \"'(hello world)\"))" 2>&1
+# emacs-18 -Q --batch --eval "(message \"%s\" (read \"'(hello world)\"))" 2>&1
+
+#emacs-27 -q --batch --eval "(message \"%s\" '(asdf))" 2>&1
+#emacs-26 -q --batch --eval "(message \"%s\" '(asdf))" 2>&1
+
+emacs-28-vcs -Q --batch --eval "(message \"%s\" (read \"(quote (hello world))\"))" 2>&1
+emacs-27 -Q --batch --eval "(message \"%s\" (read \"(quote (hello world))\"))" 2>&1
+emacs-26 -Q --batch --eval "(message \"%s\" (read \"(quote (hello world))\"))" 2>&1
+emacs-25 -Q --batch --eval "(message \"%s\" (read \"(quote (hello world))\"))" 2>&1
+emacs-24 -Q --batch --eval "(message \"%s\" (read \"(quote (hello world))\"))" 2>&1
+emacs-23 -Q --batch --eval "(message \"%s\" (read \"(quote (hello world))\"))" 2>&1
+
+emacs-28-vcs -Q --batch --eval "(message \"%s\" ''(hello world))" 2>&1
+emacs-27 -Q --batch --eval "(message \"%s\" ''(hello world))" 2>&1
+emacs-26 -Q --batch --eval "(message \"%s\" ''(hello world))" 2>&1
+emacs-25 -Q --batch --eval "(message \"%s\" ''(hello world))" 2>&1
+emacs-24 -Q --batch --eval "(message \"%s\" ''(hello world))" 2>&1
+emacs-23 -Q --batch --eval "(message \"%s\" ''(hello world))" 2>&1
+
+# princ prin1 print all have the same issue, pp on the other hand seems to be consistent
+emacs-28-vcs -Q --batch --eval "(pp ''(hello world))" 2>&1
+emacs-27 -Q --batch --eval "(pp ''(hello world))" 2>&1
+emacs-26 -Q --batch --eval "(pp ''(hello world))" 2>&1
+emacs-25 -Q --batch --eval "(pp ''(hello world))" 2>&1
+emacs-24 -Q --batch --eval "(pp ''(hello world))" 2>&1
+emacs-23 -Q --batch --eval "(pp ''(hello world))" 2>&1
+
+
+#+end_src
+
+#+RESULTS:
+#+begin_src elisp
+'(hello world)
+'(hello world)
+(quote (hello world))
+(quote (hello world))
+(quote (hello world))
+(quote (hello world))
+'(hello world)
+'(hello world)
+(quote (hello world))
+(quote (hello world))
+(quote (hello world))
+(quote (hello world))
+'(hello world)
+'(hello world)
+(quote (hello world))
+(quote (hello world))
+(quote (hello world))
+(quote (hello world))
+'(hello world)
+'(hello world)
+'(hello world)
+'(hello world)
+'(hello world)
+'(hello world)
+#+end_src
 
 This makes it possible to add comments to the code without changing the checksum this
 hopefully reduces one of the obstacles to enhancing the
@@ -582,7 +684,7 @@ the meaningful code itself has not changed
 (pp `(setq-local orgstrap-block-checksum 'sha256-sum-of-the-orgstrap-block))
 (princ ";; code for local variables\n;;XXX VERIFY THAT YOUR LOCAL VARIABLES MATCH WHAT YOU SEE HERE\n")
 (pp `(setq-local 'orgstrap-local-variables-block-version ,orgstrap--default-local-variables-block-version))
-(mapcar #'pp orgstrap--local-variable-eval-commands)
+(mapcar #'pp (orgstrap--local-variable-eval-commands))
 #+end_src
 
 #+RESULTS: local-variables-readable
@@ -592,7 +694,7 @@ the meaningful code itself has not changed
 (setq-local orgstrap-block-checksum 'sha256-sum-of-the-orgstrap-block)
 ;; code for local variables
 ;;XXX VERIFY THAT YOUR LOCAL VARIABLES MATCH WHAT YOU SEE HERE
-(setq-local 'orgstrap-local-variables-block-version 0.1)
+(setq-local 'orgstrap-local-variables-block-version "0.1")
 (defun orgstrap--expand-body (info)
   "expand noweb references if noweb is set"
   (let ((coderef (nth 6 info))
@@ -610,8 +712,10 @@ the meaningful code itself has not changed
                     (intern
                      (secure-hash
                       orgstrap-cypher
-                      (prin1-to-string
-                       (read (concat "(progn\n" body "\n)")))))))
+                      (let ((print-quoted nil)
+                            (print-escape-newlines t))
+                        (prin1-to-string
+                         (read (concat "(progn\n" body "\n)"))))))))
               (eq orgstrap-block-checksum content-checksum)))))
 (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
 (save-excursion
@@ -624,7 +728,7 @@ the meaningful code itself has not changed
 Here is what the modeline at the start of the file looks like.
 #+name: local-variables-example-header
 #+begin_example org
-# -*- orgstrap-cypher: sha256; orgstrap-block-checksum: 1a5b7b25d84212e4b3bf939fc2b8e0b37ecc9ad5e1590e82ec87f5f8692fa264; no-klobber-test: "I should still be here after it is all over!"; -*-
+# -*- orgstrap-cypher: sha256; orgstrap-block-checksum: b30de1950d8d39b69ecf445bb2b922332fd8506e228e670b0f6560dff2da4697; no-klobber-test: "I should still be here after it is all over!"; -*-
 #+end_example
 
 Here is what the =:noexport:= block below this looks like.
@@ -632,7 +736,9 @@ Here is what the =:noexport:= block below this looks like.
 #+begin_example org
 ,* Local Variables Footer :noexport:
 Local Variables:
-eval: (defun orgstrap--confirm-eval (lang body) (not (and (member lang '("elisp" "emacs-lisp")) (eq (intern (secure-hash orgstrap-cypher (prin1-to-string (read (concat "(progn\n" body "\n)"))))) orgstrap-block-checksum))))
+orgstrap-local-variables-block-version: "0.1"
+eval: (defun orgstrap--expand-body (info) "expand noweb references if noweb is set" (let ((coderef (nth 6 info)) (expand (if (org-babel-noweb-p (nth 2 info) :eval) (org-babel-expand-noweb-references info) (nth 1 info)))) (if (not coderef) expand (replace-regexp-in-string (org-src-coderef-regexp coderef) "" expand nil nil 1))))
+eval: (defun orgstrap--confirm-eval (lang body) "non-nil => prompt" (not (and (member lang '("elisp" "emacs-lisp")) (let* ((body (orgstrap--expand-body (org-babel-get-src-block-info))) (content-checksum (intern (secure-hash orgstrap-cypher (let ((print-quoted nil) (print-escape-newlines t)) (prin1-to-string (read (concat "(progn\n" body "\n)")))))))) (eq orgstrap-block-checksum content-checksum)))))
 eval: (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
 eval: (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block))
 eval: (setq-local org-confirm-babel-evaluate t)
@@ -770,6 +876,7 @@ function.
    some part of compiler theory but can't quite put my finger on it.
 ** Auto update block checksum on save
 Before save hook and/or before commit hook to automatically update the block checksum.
+** TODO command to checksum the file local variables               :noexport:
 ** TODO use orgstrap to automatically keep example blocks in sync  :noexport:
 ** TODO melpa                                                      :noexport:
 ** TODO ruby org so that github can render footnotes correctly     :noexport:
@@ -857,38 +964,19 @@ When running a file.
                    (intern
                     (secure-hash
                      orgstrap-cypher
-                     (prin1-to-string (read (concat "(progn\n" body "\n)")))))))
+                     (let ((print-quoted nil)) (prin1-to-string (read (concat "(progn\n" body "\n)"))))))))
               (message "%s %s" orgstrap-block-checksum content-checksum)
               (eq orgstrap-block-checksum content-checksum)))))
 ' ; AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa
 (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
 #+end_src
 
-Local Variables:
-orgstrap-local-variables-block-version: 0.1
-eval: (defun orgstrap--expand-body (info)
-  "expand noweb references if noweb is set"
-  (let ((coderef (nth 6 info))
-        (expand
-         (if (org-babel-noweb-p (nth 2 info) :eval)
-             (org-babel-expand-noweb-references info)
-           (nth 1 info))))
-    (if (not coderef)
-        expand
-      (replace-regexp-in-string
-       (org-src-coderef-regexp coderef) "" expand nil nil 1))))
-eval: (defun orgstrap--confirm-eval (lang body)
-  "non-nil => prompt"
-  (not (and (member lang '("elisp" "emacs-lisp"))
-       (let* ((body (orgstrap--expand-body (org-babel-get-src-block-info)))
-              (content-checksum
-                  (intern
-                    (secure-hash
-                      orgstrap-cypher
-                      (prin1-to-string (read (concat "(progn\n" body "\n)")))))))
-              (eq orgstrap-block-checksum content-checksum)))))
-eval: (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
-eval: (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block))
-eval: (setq-local org-confirm-babel-evaluate t)
-eval: (fmakunbound #'orgstrap--confirm-eval)
-End:
+# Local Variables:
+# orgstrap-local-variables-block-version: "0.1"
+# eval: (defun orgstrap--expand-body (info) "expand noweb references if noweb is set" (let ((coderef (nth 6 info)) (expand (if (org-babel-noweb-p (nth 2 info) :eval) (org-babel-expand-noweb-references info) (nth 1 info)))) (if (not coderef) expand (replace-regexp-in-string (org-src-coderef-regexp coderef) "" expand nil nil 1))))
+# eval: (defun orgstrap--confirm-eval (lang body) "non-nil => prompt" (not (and (member lang '("elisp" "emacs-lisp")) (let* ((body (orgstrap--expand-body (org-babel-get-src-block-info))) (content-checksum (intern (secure-hash orgstrap-cypher (let ((print-quoted nil) (print-escape-newlines t)) (prin1-to-string (read (concat "(progn\n" body "\n)")))))))) (eq orgstrap-block-checksum content-checksum)))))
+# eval: (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
+# eval: (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block))
+# eval: (setq-local org-confirm-babel-evaluate t)
+# eval: (fmakunbound #'orgstrap--confirm-eval)
+# End:
