--- a/orgstrap.org
+++ b/orgstrap.org
@@ -1,4 +1,4 @@
-# -*- orgstrap-cypher: sha256; orgstrap-block-checksum: b30de1950d8d39b69ecf445bb2b922332fd8506e228e670b0f6560dff2da4697; no-klobber-test: "I should still be here after it is all over!"; -*-
+# -*- orgstrap-cypher: sha256; orgstrap-block-checksum: e5bbcc80b167796e39482b6b8c69c5bce1bcaaff3194f6b0f4ca2a18807c0e9e; no-klobber-test: "I should still be here after it is all over!"; -*-
 # [[file:::orgstrap][jump to orgstrap block for this file]]
 #+title: Bootstrap an org-mode file using file local variables
 #+options: num:nil
@@ -20,9 +20,9 @@ Using =orgstrap= is easy.
    =C-x C-f= =https://raw.githubusercontent.com/tgbugs/orgstrap/master/orgstrap.org=)
    [fn::This is usually the most difficult step. See [[file:::#future-work][Future work]]
    for ideas about how to get from zero to emacs.].
-4. Decline the file local variables.
-5. Inspect the [[orgstrap][orgstrap block]] and file local variables.
-7. Reload the file and accept the file local variables.
+3. Decline the file local variables.
+4. Inspect the [[orgstrap][orgstrap block]] and file local variables.
+5. Reload the file and accept the file local variables.
 
 Congratulations you can now use =orgstrap= with your own files!
 
@@ -30,8 +30,8 @@ Invoke =M-x= =orgstrap-init= to add all
 the =orgstrap= machinery to the file in current buffer.
 
 # SOON TM
-Alternately if you would prefer a slightly more sane installation experience that
-doesn't vanish by default every time you restart emacs until you open this file again,
+Alternately if you would prefer a slightly more sane installation experience
+that doesn't vanish until you reopen this file every time you restart emacs,
 orgstrap is available on melpa.
 
 The rest of this file is an overview of use cases for =orgstrap= as well as
@@ -53,7 +53,7 @@ The bare minimum needed to make an =org-mode= file executable (with a bit of saf
 
 # Local Variables:
 # orgstrap-local-variables-block-version: "0.2"
-# eval: (defun orgstrap--confirm-eval (lang body) (not (and (member lang '("elisp" "emacs-lisp")) (eq orgstrap-block-checksum (intern (secure-hash orgstrap-cypher (let ((print-quoted nil) (print-escape-newlines t)) (prin1-to-string (read (concat "(progn\n" body "\n)"))))))))))
+# eval: (defun orgstrap--confirm-eval (lang body) (not (and (member lang '("elisp" "emacs-lisp")) (eq orgstrap-block-checksum (intern (secure-hash orgstrap-cypher (let ((print-quoted nil)) (prin1-to-string (read (concat "(progn\n" body "\n)"))))))))))
 # eval: (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
 # eval: (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block))
 # eval: (setq-local org-confirm-babel-evaluate t)
@@ -67,7 +67,7 @@ is in the tree of the code you are running. Unfortunately this is not in emacs 2
 but it is in =maint= so it should make it into core next time there is a sync.
 https://code.orgmode.org/bzg/org-mode/commit/df5a83637518ad9aa586d49884a6271f11afc592
 
-Version =0.1= of the =orgstrap= local variables described below has a portable version
+Version =0.1= of the =orgstrap= local variables described below is a portable version
 that works with unpatched versions of org-mode.
 #+name: org-babel-check-confirm-evaluate-patch
 #+begin_src diff
@@ -235,11 +235,11 @@ bootstrap block.
 ** Get the checksum of the =orgstrap= block for the current file
 You can copy the ref:do-orgstrap-add-block-checksum block into any org file
 that contains a block with =#+name: orgstrap= and then run it with =C-c C-c=
-after you have run the ref:orgstrap-helper-defuns block in this file.
+after you have run the ref:orgstrap-edit-helper-defuns block in this file.
 
-Note that ref:orgstrap-helper-defuns is nowebbed into the ref:orgstrap
+Note that ref:orgstrap-edit-helper-defuns is nowebbed into the ref:orgstrap
 block for this file. Therefore if you allow(ed) local variables for this
-file then ref:orgstrap-helper-defuns will be (was already) run for you.
+file then ref:orgstrap-edit-helper-defuns will be (was already) run for you.
 
 #+name: do-orgstrap-add-block-checksum
 #+begin_src elisp :exports code
@@ -247,7 +247,7 @@ file then ref:orgstrap-helper-defuns will be (was already) run for you.
 #+end_src
 
 #+RESULTS: do-orgstrap-add-block-checksum
-: b30de1950d8d39b69ecf445bb2b922332fd8506e228e670b0f6560dff2da4697
+: e5bbcc80b167796e39482b6b8c69c5bce1bcaaff3194f6b0f4ca2a18807c0e9e
 
 ** =orgstrap= implementation
 Functions to calculate =orgstrap-block-checksum= and set it as a file local variable.
@@ -310,13 +310,8 @@ The macro provides local bindings for four names: `info', `params', `body-unexpa
   (interactive)
   (orgstrap--with-block orgstrap-orgstrap-block-name
     (let ((cypher (or cypher (orgstrap--current-buffer-cypher)))
-          (body-normalized (let ((print-quoted nil)) (prin1-to-string (read (concat "(progn\n" body "\n)"))))))
-      (let ((print-escape-newlines t))  ; needed to preserve the escaped newlines
-        (with-current-buffer (create-file-buffer (format "/tmp/body-norm-%s" emacs-major-version))
-          (erase-buffer)
-          (insert body-normalized))
-        ;;(message "%S" body-normalized)
-        (message "%s" (secure-hash cypher body-normalized)))
+          (body-normalized (let ((print-quoted nil))
+                             (prin1-to-string (read (concat "(progn\n" body "\n)"))))))
       (secure-hash cypher body-normalized))))
 
 (defun orgstrap-add-block-checksum (&optional cypher)
@@ -333,9 +328,6 @@ The optional `cypher' argument should almost never be used, instead change the v
     orgstrap-block-checksum))
 #+end_src
 *** Init
-# Aaaaaaand of course there is a bug in `add-file-local-variable' which makes it
-# impossible to write an escaped newline and somehow allows only an actual newline
-# or a double escaped ... sigh
 #+name: orgstrap-init-helper-defuns
 #+begin_src emacs-lisp :results none :lexical yes
 ;;; init helpers
@@ -362,14 +354,16 @@ in the file local variables in `orgstrap--add-file-local-variables'")
       "non-nil => prompt"
       (not (and (member lang '("elisp" "emacs-lisp"))
                 (let* ((body (orgstrap--expand-body (org-babel-get-src-block-info)))
+                       (body-normalized
+                        (let ((print-quoted nil))
+                          (prin1-to-string (read (concat "(progn\n" body "\n)")))))
                        (content-checksum
                         (intern
                          (secure-hash
                           orgstrap-cypher
-                          (let ((print-quoted nil)
-                                (print-escape-newlines t))
-                            (prin1-to-string (read (concat "(progn\n" body "\n)"))))))))
+                          body-normalized))))
                   ;;(message "%s %s" orgstrap-block-checksum content-checksum)
+                  ;;(message "%s" body-normalized)
                   (eq orgstrap-block-checksum content-checksum)))))
     (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
     (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block))
@@ -383,8 +377,7 @@ in the file local variables in `orgstrap--add-file-local-variables'")
                     (intern
                      (secure-hash
                       orgstrap-cypher
-                      (let ((print-quoted nil)
-                            (print-escape-newlines t))
+                      (let ((print-quoted nil))
                         (prin1-to-string (read (concat "(progn\n" body "\n)"))))))))))
     (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
     (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block))
@@ -594,88 +587,28 @@ as a =safe-local-variable=. In this context this workaround seems reasonable
 and not malicious because the use of =eval:= should alert users that some
 arbitrary stuff is going on and that they should check it very carefully.
 
-Here is a more readable version of what the compacted local variables code
+Below is a more readable version of what the compacted local variables code
 at the end of the file is doing. *Make sure to check that the code matches.*
 # TODO it is entirely possible to automate that check.
 
-=(prin1-to-string (read (concat "(progn\n" body "\n)")))= is used to normalize the code in
-the orgstrap block, removing any comments and formatting irregularities.
-This is important for two reasons. First it helps prevent denial of service
-attacks against human auditors who have low bandwidth for detecting fiddly
-changes.
-# FIXME prin1-to-string IS NOT PORTABLE TO EMACS 26 WAT !?!?!?
-# quote vs ' issues with that, how to revert/find something consistent, or maybe it is read !??!
-# this is indeed a change in how message is working
-# all of these issues are caused by a change in the default for `print-quoted' from t to nil
-#+begin_src bash :results output code :wrap "src elisp"
-emacs-28-vcs -Q --batch --eval "(message \"%s\" (read \"'(hello world)\"))" 2>&1
-emacs-27 -Q --batch --eval "(message \"%s\" (read \"'(hello world)\"))" 2>&1
-emacs-26 -Q --batch --eval "(message \"%s\" (read \"'(hello world)\"))" 2>&1
-emacs-25 -Q --batch --eval "(message \"%s\" (read \"'(hello world)\"))" 2>&1
-emacs-24 -Q --batch --eval "(message \"%s\" (read \"'(hello world)\"))" 2>&1
-emacs-23 -Q --batch --eval "(message \"%s\" (read \"'(hello world)\"))" 2>&1
-# emacs-18 -Q --batch --eval "(message \"%s\" (read \"'(hello world)\"))" 2>&1
-
-#emacs-27 -q --batch --eval "(message \"%s\" '(asdf))" 2>&1
-#emacs-26 -q --batch --eval "(message \"%s\" '(asdf))" 2>&1
-
-emacs-28-vcs -Q --batch --eval "(message \"%s\" (read \"(quote (hello world))\"))" 2>&1
-emacs-27 -Q --batch --eval "(message \"%s\" (read \"(quote (hello world))\"))" 2>&1
-emacs-26 -Q --batch --eval "(message \"%s\" (read \"(quote (hello world))\"))" 2>&1
-emacs-25 -Q --batch --eval "(message \"%s\" (read \"(quote (hello world))\"))" 2>&1
-emacs-24 -Q --batch --eval "(message \"%s\" (read \"(quote (hello world))\"))" 2>&1
-emacs-23 -Q --batch --eval "(message \"%s\" (read \"(quote (hello world))\"))" 2>&1
-
-emacs-28-vcs -Q --batch --eval "(message \"%s\" ''(hello world))" 2>&1
-emacs-27 -Q --batch --eval "(message \"%s\" ''(hello world))" 2>&1
-emacs-26 -Q --batch --eval "(message \"%s\" ''(hello world))" 2>&1
-emacs-25 -Q --batch --eval "(message \"%s\" ''(hello world))" 2>&1
-emacs-24 -Q --batch --eval "(message \"%s\" ''(hello world))" 2>&1
-emacs-23 -Q --batch --eval "(message \"%s\" ''(hello world))" 2>&1
-
-# princ prin1 print all have the same issue, pp on the other hand seems to be consistent
-emacs-28-vcs -Q --batch --eval "(pp ''(hello world))" 2>&1
-emacs-27 -Q --batch --eval "(pp ''(hello world))" 2>&1
-emacs-26 -Q --batch --eval "(pp ''(hello world))" 2>&1
-emacs-25 -Q --batch --eval "(pp ''(hello world))" 2>&1
-emacs-24 -Q --batch --eval "(pp ''(hello world))" 2>&1
-emacs-23 -Q --batch --eval "(pp ''(hello world))" 2>&1
-
-
+#+caption: code normalization
+#+begin_src elisp :eval never
+(let ((print-quoted nil))
+  (prin1-to-string (read (concat "(progn\n" body "\n)"))))
 #+end_src
 
-#+RESULTS:
-#+begin_src elisp
-'(hello world)
-'(hello world)
-(quote (hello world))
-(quote (hello world))
-(quote (hello world))
-(quote (hello world))
-'(hello world)
-'(hello world)
-(quote (hello world))
-(quote (hello world))
-(quote (hello world))
-(quote (hello world))
-'(hello world)
-'(hello world)
-(quote (hello world))
-(quote (hello world))
-(quote (hello world))
-(quote (hello world))
-'(hello world)
-'(hello world)
-'(hello world)
-'(hello world)
-'(hello world)
-'(hello world)
-#+end_src
+=prin1-to-string= is used to normalize the code in the orgstrap block,
+removing any comments and formatting irregularities. This is important
+for two reasons. First it helps prevent denial of service attacks
+against human auditors who have low bandwidth for detecting fiddly
+changes. =(print-quoted nil)= is needed for backward compatibility
+due to a change to the default from =nil= to =t= in emacs-27 (sigh).
 
-This makes it possible to add comments to the code without changing the checksum this
-hopefully reduces one of the obstacles to enhancing the
-documentation of orgstrap code and blocks over time when
-the meaningful code itself has not changed
+Normalization that ignores comments makes it possible to add improve
+the documentation of code without changing the checksum. Hopefully
+this will reduce one of the obstacles to enhancing the documentation
+of orgstrap code and blocks over time since rehashing will not be
+required when the meaningful code itself has not changed.
 
 #+name: local-variables-readable
 #+begin_src emacs-lisp :results output raw :wrap "src emacs-lisp :eval never" :exports results :eval no-export
@@ -712,8 +645,7 @@ the meaningful code itself has not changed
                     (intern
                      (secure-hash
                       orgstrap-cypher
-                      (let ((print-quoted nil)
-                            (print-escape-newlines t))
+                      (let ((print-quoted nil))
                         (prin1-to-string
                          (read (concat "(progn\n" body "\n)"))))))))
               (eq orgstrap-block-checksum content-checksum)))))
@@ -728,7 +660,7 @@ the meaningful code itself has not changed
 Here is what the modeline at the start of the file looks like.
 #+name: local-variables-example-header
 #+begin_example org
-# -*- orgstrap-cypher: sha256; orgstrap-block-checksum: b30de1950d8d39b69ecf445bb2b922332fd8506e228e670b0f6560dff2da4697; no-klobber-test: "I should still be here after it is all over!"; -*-
+# -*- orgstrap-cypher: sha256; orgstrap-block-checksum: f58cbf2c0d1afea98e99c7c775fe3a1e6f9a3c13d5e4db68d26ea96e28f60d04; no-klobber-test: "I should still be here after it is all over!"; -*-
 #+end_example
 
 Here is what the =:noexport:= block below this looks like.
@@ -738,7 +670,7 @@ Here is what the =:noexport:= block below this looks like.
 Local Variables:
 orgstrap-local-variables-block-version: "0.1"
 eval: (defun orgstrap--expand-body (info) "expand noweb references if noweb is set" (let ((coderef (nth 6 info)) (expand (if (org-babel-noweb-p (nth 2 info) :eval) (org-babel-expand-noweb-references info) (nth 1 info)))) (if (not coderef) expand (replace-regexp-in-string (org-src-coderef-regexp coderef) "" expand nil nil 1))))
-eval: (defun orgstrap--confirm-eval (lang body) "non-nil => prompt" (not (and (member lang '("elisp" "emacs-lisp")) (let* ((body (orgstrap--expand-body (org-babel-get-src-block-info))) (content-checksum (intern (secure-hash orgstrap-cypher (let ((print-quoted nil) (print-escape-newlines t)) (prin1-to-string (read (concat "(progn\n" body "\n)")))))))) (eq orgstrap-block-checksum content-checksum)))))
+eval: (defun orgstrap--confirm-eval (lang body) "non-nil => prompt" (not (and (member lang '("elisp" "emacs-lisp")) (let* ((body (orgstrap--expand-body (org-babel-get-src-block-info))) (content-checksum (intern (secure-hash orgstrap-cypher (let ((print-quoted nil)) (prin1-to-string (read (concat "(progn\n" body "\n)")))))))) (eq orgstrap-block-checksum content-checksum)))))
 eval: (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
 eval: (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block))
 eval: (setq-local org-confirm-babel-evaluate t)
@@ -954,29 +886,12 @@ When running a file.
    (assuming no hash collisions).
 4. *Observe whether org-mode complains that the orgstrap block has changed.*
 * Local Variables Footer :noexport:
-#+begin_src elisp :exports none
-(defun orgstrap--confirm-eval (lang body) t)
-(defun orgstrap--confirm-eval (lang body) nil)
-(defun orgstrap--confirm-eval (lang body)
-  "non-nil => prompt"
-  (not (and (member lang '("elisp" "emacs-lisp"))
-            (let ((content-checksum
-                   (intern
-                    (secure-hash
-                     orgstrap-cypher
-                     (let ((print-quoted nil)) (prin1-to-string (read (concat "(progn\n" body "\n)"))))))))
-              (message "%s %s" orgstrap-block-checksum content-checksum)
-              (eq orgstrap-block-checksum content-checksum)))))
-' ; AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa
-(setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
-#+end_src
-
-# Local Variables:
-# orgstrap-local-variables-block-version: "0.1"
-# eval: (defun orgstrap--expand-body (info) "expand noweb references if noweb is set" (let ((coderef (nth 6 info)) (expand (if (org-babel-noweb-p (nth 2 info) :eval) (org-babel-expand-noweb-references info) (nth 1 info)))) (if (not coderef) expand (replace-regexp-in-string (org-src-coderef-regexp coderef) "" expand nil nil 1))))
-# eval: (defun orgstrap--confirm-eval (lang body) "non-nil => prompt" (not (and (member lang '("elisp" "emacs-lisp")) (let* ((body (orgstrap--expand-body (org-babel-get-src-block-info))) (content-checksum (intern (secure-hash orgstrap-cypher (let ((print-quoted nil) (print-escape-newlines t)) (prin1-to-string (read (concat "(progn\n" body "\n)")))))))) (eq orgstrap-block-checksum content-checksum)))))
-# eval: (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
-# eval: (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block))
-# eval: (setq-local org-confirm-babel-evaluate t)
-# eval: (fmakunbound #'orgstrap--confirm-eval)
-# End:
+Local Variables:
+orgstrap-local-variables-block-version: "0.1"
+eval: (defun orgstrap--expand-body (info) "expand noweb references if noweb is set" (let ((coderef (nth 6 info)) (expand (if (org-babel-noweb-p (nth 2 info) :eval) (org-babel-expand-noweb-references info) (nth 1 info)))) (if (not coderef) expand (replace-regexp-in-string (org-src-coderef-regexp coderef) "" expand nil nil 1))))
+eval: (defun orgstrap--confirm-eval (lang body) "non-nil => prompt" (not (and (member lang '("elisp" "emacs-lisp")) (let* ((body (orgstrap--expand-body (org-babel-get-src-block-info))) (body-normalized (let ((print-quoted nil)) (prin1-to-string (read (concat "(progn\n" body "\n)"))))) (content-checksum (intern (secure-hash orgstrap-cypher body-normalized)))) (eq orgstrap-block-checksum content-checksum)))))
+eval: (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
+eval: (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block))
+eval: (setq-local org-confirm-babel-evaluate t)
+eval: (fmakunbound #'orgstrap--confirm-eval)
+End:
